--- a/style.css
+++ b/style.css
@@ -1,6 +1,32 @@
 body{
     background-color: #d6e1f0;
+    margin: 0;
+    
 }
 .content{
     background-color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+img{
+    width: 25em;
+    height: 25em;
+}
+p{
+    font-size: 15px;
+    width: 25em;
+}
+h2{
+    width: 25em;
+}
+.qr{
+    margin: 1em;
+    width: 25em;
+    height: 25em;
+}
+.text{
+    width: 25em;
+    margin: 1em;
 }
