separated the paragrapgh text with breaks

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h2{
 /* <uniquifier>: Use a unique and descriptive class name*/
 /* <weight>: Use a value from 100 to 900*/
 
-.text {
+.text {/*https://fonts.google.com/selection/embed*/
   font-family: "Outfit", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
